--- a/templates/singles.html
+++ b/templates/singles.html
@@ -1,6 +1,12 @@
 <ng-map center="current-location"zoom="13">
   <marker position="current-location" title="You Are Here!"></marker>
-  <marker position="{{ sCtrl.site[0] }} ,{{ sCtrl.site[1] }}" title="{{sCtrl.site[2]}}"></marker>
+  <marker ng-repeat="obj in sCtrl.site" position="{{obj.lat}},{{obj.lng}}" title="{{obj.name}}"></marker>
 </ng-map>
 
-<h3>{{sCtrl.site[2]}}</h3>
+<div class="container">
+  <div class="row">
+    <div class="twelve columns" ng-repeat="obj in sCtrl.site">
+      <h3>{{obj.name}}</h3>
+    </div>
+  </div>
+</div>
