--- a/templates/singles.html
+++ b/templates/singles.html
@@ -1,4 +1,4 @@
-<ng-map center="current-location"zoom="13">
+<ng-map center="current-location"zoom="11">
   <marker position="current-location" title="You Are Here!"></marker>
   <marker ng-repeat="obj in sCtrl.site" position="{{obj.lat}},{{obj.lng}}" title="{{obj.name}}"></marker>
 </ng-map>
@@ -6,7 +6,10 @@
 <div class="container">
   <div class="row">
     <div class="twelve columns" ng-repeat="obj in sCtrl.site">
+    <h4>{{obj.type}}</h4>
       <h3>{{obj.name}}</h3>
+      <p>{{obj.vicinity}}</p>
+      <hr />
     </div>
   </div>
 </div>
