--- a/templates/couples.html
+++ b/templates/couples.html
@@ -5,7 +5,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="twelve columns" ng-repeat="obj in cCtrl.site">
+    <div class="twelve columns" ng-repeat="obj in cCtrl.site | filter: cCtrl.typeFormat">
     <h4>{{obj.type}}</h4>
       <h3>{{obj.name}}</h3>
       <p>{{obj.vicinity}}</p>
