--- a/templates/singles.html
+++ b/templates/singles.html
@@ -1,13 +1,18 @@
-<ng-map center="current-location"zoom="11">
+<ng-map center="current-location" zoom="11">
   <marker position="current-location" title="You Are Here!"></marker>
   <marker ng-repeat="obj in sCtrl.site" position="{{obj.lat}},{{obj.lng}}" title="{{obj.name}}"></marker>
 </ng-map>
 
+<section id="headline">
+  <h3>Single And ready to Mingle, <small>try out these places!</small></h3>
+</section>
+
 <div class="container">
-  <div class="row">
-    <div class="twelve columns" ng-repeat="obj in sCtrl.site">
-    <h4>{{obj.type}}</h4>
-      <h3>{{obj.name}}</h3>
+  <div class="row"  ng-repeat="obj in sCtrl.site | filter: sCtrl.typeFormat">
+    <div class="twelve columns">
+      <img src="{{obj.icon}}" alt="Restaurant Icon">
+      <h5>{{obj.type}}</h5>
+      <h4>{{obj.name}}</h4>
       <p>{{obj.vicinity}}</p>
       <hr />
     </div>
