--- a/templates/singles.html
+++ b/templates/singles.html
@@ -3,7 +3,7 @@
   <marker ng-repeat="obj in sCtrl.site" position="{{obj.lat}},{{obj.lng}}" title="{{obj.name}}"></marker>
 </ng-map>
 
-<section id="headline">
+<section id="headline-singles">
   <h3>Single And ready to Mingle, <small>try out these places!</small></h3>
 </section>
 
