--- a/main.css
+++ b/main.css
@@ -106,6 +106,25 @@ header {
   height:100%;
 }
 
+#about {
+  font-size: x-large;
+}
+
+#about-image {
+  background-image: url('http://www.stanleyhotel.com/uploads/homepage-slideshow/Whiskey-Bar-Image.jpg');
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 300px;
+  /*margin-bottom: 50px;*/
+}
+#about-headline {
+  width: 100%;
+  background-color: #CC6600;
+  padding: 20px 0px;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
 .text-center {
   text-align: center;
   padding-top: 50px;
